public/css/style.css
body {
  padding-top: 75px;
}

footer {
  background-color: whitesmoke;
  position: relative;
  bottom: 100;
  width: 100%;
  height: 200px; /* Set the fixed height of the footer here */
  line-height: 60px; /* Vertically center the text there */
}

.navbar {
  background-color: whitesmoke;
}

#bsr-page-footer {
  padding: 1rem 1rem 1rem;
}

hr {
  border-top: 1px solid rgba(0, 0, 0, 0.1);
}

/* Add right borders for the divs... */
#bsr-page-footer .bsr-footer-main-links div {
  border-right: 1px solid rgba(0, 0, 0, 0.1);
  padding: 1.25rem;
}

/* ...except no border on the right-most div */
#bsr-page-footer .bsr-footer-main-links div:last-of-type {
  border: none;
}

/* Remove bullets for social social icons */
#bsr-page-footer .bsr-social-icons {
  list-style-type: none;
}

/* Style the social icon list items further */
#bsr-page-footer .bsr-social-icons li {
  margin-left: 0.25rem;
  margin-right: 0.25rem;
  display: inline;
}

/* Remove styling on the main columnar links */
.bsr-footer-links li {
  background: transparent;
  border: 0px;
  padding: 0.25rem;
}

/* Styling for the ancillary links */
#bsr-page-footer .bsr-footer-ancillary-links {
  list-style-type: none;
}

#bsr-page-footer .bsr-footer-ancillary-links li {
  display: inline;
  margin-left: 0.3rem;
  margin-right: 0.3rem;
  text-align: right;
  font-size: smaller;
}

